--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -2,10 +2,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item
-            android:id="@+id/search_icon"
-            android:icon="@android:drawable/ic_menu_search"
-            android:title="Pesquisa"
-            app:showAsAction="always" />
+<!--    <item-->
+<!--            android:id="@+id/search_icon"-->
+<!--            android:icon="@android:drawable/ic_menu_search"-->
+<!--            android:title="Pesquisa"-->
+<!--            app:showAsAction="always" />-->
 
+
+    <item
+            android:id="@+id/app_bar_search"
+            android:icon="@drawable/ic_search_black_24dp"
+            android:title="Pesquisa"
+            app:actionViewClass="android.widget.SearchView"
+            app:showAsAction="always"/>
 </menu>
