--- a/app/src/main/res/layout/activity_camera_no_app.xml
+++ b/app/src/main/res/layout/activity_camera_no_app.xml
@@ -11,7 +11,7 @@
             android:id="@+id/btnCapturar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Camera" />
+            android:text="Capturar" />
 
     <FrameLayout
             android:id="@+id/frameLayout"
