--- a/app/src/main/res/layout/activity_listar_fotos.xml
+++ b/app/src/main/res/layout/activity_listar_fotos.xml
@@ -7,9 +7,9 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-    <ImageView
-            android:id="@+id/imageViewResultDb"
+
+    <ListView
+            android:id="@+id/listViewResultDb"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
-
 </LinearLayout>
